--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
     </div>
 
-    <a-scene environment="ground:flat; preset: japan; seed: 6;fog:0;shadow:true;" renderer="antialias: true; colorManagement: true;" camera-position cursor="rayOrigin: mouse"
+    <a-scene environment="ground:flat; preset: default; seed: 6;fog:0;shadow:true;" renderer="antialias: true; colorManagement: true;" camera-position cursor="rayOrigin: mouse"
         raycaster="far: 100; objects: .raycastable;" loading-screen="enabled: false;">
         <a-assets>
             <!-- <a-asset-item response-type="arraybuffer" id="robot" src="assets/models/robot.glb"></a-asset-item> -->
