--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="https://unpkg.com/aframe-event-set-component@4.2.1/dist/aframe-event-set-component.min.js"></script>
     <script src="https://unpkg.com/aframe-aabb-collider-component@3.2.0/dist/aframe-aabb-collider-component.min.js"></script>
     <script src="https://unpkg.com/aframe-proxy-event-component/dist/aframe-proxy-event-component.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.137/examples/js/loaders/RGBELoader.js"></script>
     <script src="assets/js/script.js"></script>    
     <script src="https://unpkg.com/aframe-gltf-part-component/dist/aframe-gltf-part-component.min.js"></script>
 </head>
